# ironcurtain

./: Cargo.toml
examples/: builder.rs  courses.rs  rice_courses.rs
ironcurtain-model/: Cargo.toml
ironcurtain-model/src/: courses.rs
src/: error.rs  lib.rs  page.rs
src/api/: courses.rs
src/models/: courses.rs
