[package]
name = "ironcurtain"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "ironcurtain-model"
]
resolver = "2"

[dependencies]
ironcurtain-model = { version = "0.1.0", path = "ironcurtain-model" }

chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.10", features = ["cookies", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
