[package]
name = "ironcurtain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.10", features = ["cookies", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
parse_link_header = { version = "0.3.2", features = ["url"] }
futures = "0.3.21"
async-stream = "0.3.3"
thiserror = "1.0.31"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros"] }
